# Agent4Mat

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SOUL.md  docker-compose.yml  pyproject.toml  setup.py
docs/: adapters_and_fallbacks.md  agent_architecture.md  ci.md  current_capabilities.md  deploy.md  deployment.md  external_chain_runbook.md  external_scorer_error_codes.md  llm_integration_plan.md  migration_plan.md  quickstart.md  real_chain_acceptance_real.md  real_chain_minimal_acceptance.md  real_chain_no_fallback_quickstart.md  release_boundary.md  release_v0.1.0-rc1.md  release_v0.1.0.md  script_migration_map.json  script_migration_whitelist.md  script_reuse_audit.md  troubleshooting.md  ui_prototype.md
requirements/: README.md  base.in  cpu.in  dev.in  gpu.in
schemas/: data_report.schema.json  decision_summary.schema.json  evaluation_report.schema.json  filtering_report.schema.json  guardrails_report.schema.json  memory_context.schema.json  model_report.schema.json  plan.schema.json  request.schema.json  step_request.schema.json  task.schema.v2.json  task_state.schema.json
scripts/: archive_real_chain_baseline.py  build_script_migration_map.py  check_experiment_trace.py  check_external_env.sh  check_intake_contracts.py  check_llm_planner_modes.py  check_real_chain_release_bundle.py  check_real_no_fallback.py  check_release_boundary.py  check_resume_idempotence.py  check_step_mode.py  check_ui_acceptance_bundle.py  check_ui_acceptance_bundle_artifact.py  check_ui_audit_acceptance.py  check_ui_freeze_acceptance.py  (+28 more)
(+69 files in other folders)
